# P3

./: Makefile  README.md
ARPREC/arprec/: AUTHORS  ChangeLog  INSTALL  Makefile.in  README  aclocal.m4  arprec-config.in  config.h.in  configure.ac
ARPREC/arprec-2.2.13/: ._ChangeLog  ._configure.ac  COPYING  Makefile  Makefile.am  TODO  arprec-config  config.h  config.status  configure  libtool
ARPREC/arprec-2.2.13/fortran/: Makefile  Makefile.am  Makefile.in  f_mp.cpp  f_mp.lo  libarprec_f_main.la  libarprecmod.la  mp_mod.f  mp_mod.lo  mp_modm.f  mp_modm.lo  mp_modx.f  mp_modx.lo  mpcomplexmod.mod  mpdefmod.mod  mpgenmod.mod  mpintmod.mod  mpmodule.mod  mpmodulem.mod  mpmodulex.mod  mprealmod.mod  pslq1  pslq2  pslq3  pslqm1  pslqm2  pslqm3  quaderf  quadglobal.mod  quadgs  quadts  roots  tpslqm1.f  tpslqm3.f  tquaderf.f  tquadgs.f
ARPREC/arprec-2.2.13/fortran/.deps/: f_mp.Plo  main.Plo
ARPREC/arprec-2.2.13/fortran/.libs/: libarprec_f_main.la  libarprec_f_main.lai  libarprecmod.la  libarprecmod.lai
ARPREC/arprec-2.2.13/include/: Makefile  Makefile.in
ARPREC/arprec-2.2.13/include/arprec/: arprec_config.h  arprec_config.h.in  c_mp.h  double_inline.h  fpu.h  mp.h  mp_complex.h  mp_complex_inline.h  mp_complex_temp.h  mp_inline.h  mp_int.h  mp_int_inline.h  mp_int_temp.h  mp_real.h  mp_real_temp.h  stamp-h2
ARPREC/arprec-2.2.13/m4/: ax_check_qd.m4  ax_cxx_fma.m4  ax_f90_module_flag.m4  ax_fc_backslash_flag.m4
ARPREC/arprec-2.2.13/src/: ._write.cpp  Makefile  Makefile.am  Makefile.in  add.cpp  add.lo  agmx.cpp  agmx.lo  ang.cpp  ang.lo  angx.cpp  angx.lo  array.cpp  array.lo  assign.cpp  assign.lo  bessel.cpp  bessel.lo  besselexp.cpp  besselexp.lo  binary_io.cpp  binary_io.lo  c_mp.cpp  c_mp.lo  complex.cpp  complex.lo  construct.cpp  construct.lo  cpr.cpp  cpr.lo  cshx.cpp  cshx.lo  cssh.cpp  cssh.lo  cssn.cpp  cssn.lo  cssx.cpp  cssx.lo  dble.cpp  dble.lo  (+120 more)
ARPREC/arprec-2.2.13/src/.deps/: add.Plo  agmx.Plo  ang.Plo  angx.Plo  array.Plo  assign.Plo  bessel.Plo  besselexp.Plo  binary_io.Plo  c_mp.Plo  complex.Plo  construct.Plo  cpr.Plo  cshx.Plo  cssh.Plo  cssn.Plo  cssx.Plo  dble.Plo  debug.Plo  dexc.Plo  div.Plo  divd.Plo  divrem.Plo  divx.Plo  dmc.Plo  dotd.Plo  eq.Plo  erf.Plo  erfc.Plo  exp.Plo  expx.Plo  fft1.Plo  fft2.Plo  fft3.Plo  fftcr.Plo  fftrc.Plo  fmod.Plo  fpu.Plo  gamma.Plo  inc.Plo  (+38 more)
ARPREC/arprec-2.2.13/src/.libs/: libarprec.la  libarprec.lai
ARPREC/arprec-2.2.13/tests/: Makefile  Makefile.am  Makefile.in  arprec-integrate.cpp  arprec-integrate.h  mp_ex.cpp  mp_timer  mpslq1  mpslq1.cpp  mpslq1_util.cpp  mpslq2  mpslq2.cpp  mpslq2.h  mpslq2_main.cpp  mpslq2_templates.cpp  mpslq3  mpslq3.cpp  mpslq3.h  mpslq3_main.cpp  pslq1  pslq1.cpp  pslq1.h  pslq1_main.cpp  pslq1_templates.cpp  pslq1_util.cpp  pslq2  pslq2.cpp  pslq2.h  pslq2_main.cpp  pslq2_templates.cpp  pslq3  pslq3.cpp  pslq3.h  pslq3_main.cpp  pslq3_templates.cpp  pslq_main_util.cpp  quad-erf.cpp  quad-erf.h  quad-gs.cpp  quad-gs.h  (+9 more)
ARPREC/arprec-2.2.13/tests/.deps/: arprec-integrate.Po  mp_timer.Po  mpslq1.Po  mpslq1_main.Po  mpslq1_util.Po  mpslq2.Po  mpslq2_main.Po  mpslq3.Po  mpslq3_main.Po  pslq1.Po  pslq1_main.Po  pslq1_util.Po  pslq2.Po  pslq2_main.Po  pslq2_util.Po  pslq3.Po  pslq3_main.Po  pslq_main_util.Po  quad-erf.Po  quad-gs.Po  quad-ts.Po  quads.Po  tictoc.Po  util.Po
ARPREC/arprec-2.2.13/toolkit/: Makefile  README  globdata.mod  mathinit  mathinit.f  mathtool  quadsub.f  second.f  second.f.in
ARPREC/arprec/fortran/: Makefile.sample  complink.scr  quadglobal.mod  roots.f  tpslq1.f  tpslq2.f  tpslq3.f  tpslqm2.f  tquadts  tquadts.f  tts2d  tts2d.f90
ARPREC/arprec/include/: Makefile.am  Makefile.in
ARPREC/arprec/tests/: c_mp_test.c  f_mp_test.f  integrate.h  io.cpp  matrix.h  mp_test.cpp  mp_timer.cpp  mpslq1.h  mpslq1_main.cpp  mpslq1_templates.cpp  mpslq2.cpp  mpslq2.h  mpslq2_main.cpp  mpslq2_templates.cpp  mpslq3.cpp  mpslq3_main.cpp  mpslq3_templates.cpp  pslq1.cpp  pslq1.h  pslq1_main.cpp  pslq1_templates.cpp  pslq1_util.cpp  pslq2.cpp  pslq2.h  pslq2_main.cpp  pslq2_templates.cpp  pslq2_util.cpp  pslq3.cpp  pslq3_main.cpp  pslq_main_util.cpp  quad-erf.cpp  quad-erf.h  quad-gs.cpp  quad-gs.h  quad-ts.cpp  quad-ts.h  quads.cpp  tictoc.cpp  tictoc.h  trig.cpp  (+2 more)
ARPREC/arprec/toolkit/: Makefile.am  Makefile.in  globdata.f  mathtool.f
MPFUN90/E1/: Makefile  mpfun90.f  mpmod90.f  p_mpfun_e1.f  result
MPFUN90/mpfun90/: README
MPFUN90/mpfun90/f90/: Makefile
MPFUN90/mpfun90/toolkit/: Makefile  globdata.f90  globdata.mod  mathinit  mathinit.f90  mathtool  mathtool.f90  mpcmpmod.mod  mpdefmod.mod  mpfun90.f90  mpfunb.mod  mpfund.mod  mpfune.mod  mpfunf.mod  mpfunh.mod  mpfuni.mod  mpfunj.mod  mpfunmod.mod  mpfunsubmod.mod  mpgenmod.mod  mpintmod.mod  mpmod90.f90  mpmodule.mod  mprealmod.mod  pslqsub.f90  quadsub.f90  rootsub.f90  zetapz.f90
MPFUN90/Лабораторная работа (Евгений Родионов)/: makefile
MPFUN90/Лабораторная работа - Евгений Родионов/LabPracticum/: RungeKutta.f90  f_main  f_main.f90  rungekutta.mod
MPFUN90/Тестовая комната/: input  mp_output_copy  p_e1.f  p_main.f  result
Первый курс/: Pavel_Sobolev--Home3_Remake.tar
Первый курс/CONTROL_WORK/Task1/: Makefile  input  main  main.f95  result  subroutines.f95  subroutines.mod
Первый курс/Control_Work/part_1/: Prog  fun.mod  main.f90  (+2 more)
Первый курс/Home1_Remake/: Pavel_Sobolev--Home1_Remake.tar
Первый курс/Home3_Remake/: Makefile  Old.tar  binrad.f95  binrad.mod  input  main  main.f95  main.f95~  main~  poly.f95  poly.f95~  poly.mod  quadra.f95  quadra.mod  readme_3b  result
Первый курс/Home4_Remake/: Makefile  Pavel_Sobolev--Home4_Remake.tar  graph.eps  graph_s.eps  graph_t.eps  input  main  main.f95  quadra.f95  quadra.mod  readme_4  result  so.f90  sort.f95  sort.mod  sort_a.f90
Первый курс/Home5_Remake/: Pavel_Sobolev--Home5_Remake.tar
Первый курс/Второй семестр/: Прочитайте перед просмотром!
Первый курс/Первый семестр/: First  First.f90  prog.f95
Тестовая комната/0/: input  main.f95  test
Тестовая комната/1/: Makefile  data_decart  data_decart_out  main  main.f95  test.eps  test.gnu
(+483 files in other folders)
