SRC = add.cpp agmx.cpp ang.cpp angx.cpp bessel.cpp besselexp.cpp       \
      c_mp.cpp complex.cpp cpr.cpp cshx.cpp cssh.cpp cssn.cpp cssx.cpp \
      dexc.cpp div.cpp divd.cpp divx.cpp dmc.cpp dotd.cpp eq.cpp       \
      erfc.cpp erf.cpp exp.cpp expx.cpp fft1.cpp fft2.cpp fft3.cpp     \
      fftcr.cpp fftrc.cpp fpu.cpp gamma.cpp infr.cpp init.cpp          \
      inix.cpp inpc.cpp int.cpp lconv.cpp log.cpp logx.cpp             \
      mdc.cpp mulacc.cpp mul.cpp muld.cpp mulx.cpp nint.cpp norm.cpp   \
      npwr.cpp npwx.cpp nrt.cpp nrtx.cpp outc.cpp out.cpp outx.cpp     \
      pi.cpp pix.cpp qd.cpp rand.cpp roun.cpp sort.cpp sqrt.cpp        \
      sqrtx.cpp sqx.cpp sub.cpp binary_io.cpp to_digits.cpp read.cpp   \
      construct.cpp write.cpp assign.cpp fmod.cpp inc.cpp divrem.cpp   \
      int_div.cpp mp_real.cpp array.cpp small_inline.cpp debug.cpp     \
      dble.cpp                                                         \
      small_inline.h

lib_LTLIBRARIES = libarprec.la

libarprec_la_SOURCES = $(SRC)

AM_CPPFLAGS = -I$(top_builddir) -I$(top_builddir)/include -I$(top_srcdir)/include

