HDR = arprec/c_mp.h arprec/fpu.h \
      arprec/mp.h arprec/mp_complex.h arprec/mp_complex_inline.h \
			arprec/mp_complex_temp.h arprec/mp_inline.h arprec/mp_int.h \
			arprec/mp_int_inline.h arprec/mp_int_temp.h arprec/mp_real.h \
			arprec/mp_real_temp.h arprec/double_inline.h

nobase_include_HEADERS = $(HDR)
nobase_nodist_include_HEADERS = arprec/arprec_config.h

